fixed bugs and errors

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <meta name="google-site-verification" content="liREIKliMvk0Ud6xkTG62aTNYJ9znxELQ-x3isrMItE" />
 
 
   <title>Smart Expense Tracker</title>
